tests/negative/runtime/substr_negative_start/input.ci
void main() {
    print(substr("abc", -1, 1) + "\n");
}
